# OneThingAssist

./: .gitignore
AsrServiceProxy/: CMakeLists.txt
AsrServiceProxy/app/: CMakeLists.txt
AsrServiceProxy/app/include/: asr_proxy_impl.h  asr_service.h  asr_service_factory.h  bd_asr_service.h  config.h  pipeline.h  proxy_server.h
AsrServiceProxy/app/src/: asr_proxy_impl.cpp  asr_service.cpp  asr_service_factory.cpp  bd_asr_service.cpp  config.cpp  main.cpp  pipeline.cpp  proxy_server.cpp
AsrServiceProxy/conf/: default.json
AsrServiceProxy/config/: config.project
AsrServiceProxy/config/include/: config.hpp  config_exception.hpp  config_include_context.hpp  config_includer.hpp  config_includer_file.hpp  config_list.hpp  config_mergeable.hpp  config_object.hpp  config_origin.hpp  config_parse_options.hpp  config_parseable.hpp  config_render_options.hpp  config_resolve_options.hpp  config_syntax.hpp  config_types.hpp  config_util.hpp  config_value.hpp  config_value_type.hpp
AsrServiceProxy/config/include/detail/: abstract_config_object.hpp  abstract_config_value.hpp  config_base.hpp  config_boolean.hpp  config_concatenation.hpp  config_delayed_merge.hpp  config_delayed_merge_object.hpp  config_double.hpp  config_impl.hpp  config_impl_util.hpp  config_int.hpp  config_int64.hpp  config_null.hpp  config_number.hpp  config_reference.hpp  config_string.hpp  default_transformer.hpp  file_reader.hpp  from_map_mode.hpp  full_includer.hpp  instance_utils.hpp  memo_key.hpp  mergeable_value.hpp  misc_utils.hpp  origin_type.hpp  parseable.hpp  parser.hpp  path.hpp  path_builder.hpp  reader.hpp  replaceable_merge_stack.hpp  resolve_context.hpp  resolve_memos.hpp  resolve_replacer.hpp  resolve_source.hpp  resolve_status.hpp  simple_config.hpp  simple_config_list.hpp  simple_config_object.hpp  simple_config_origin.hpp  (+10 more)
AsrServiceProxy/config/src/: config.cpp  config_exception.cpp  config_list.cpp  config_object.cpp  config_parse_options.cpp  config_render_options.cpp  config_resolve_options.cpp  config_util.cpp  config_value.cpp  config_value_type.cpp
AsrServiceProxy/config/src/detail/: abstract_config_object.cpp  abstract_config_value.cpp  config_base.cpp  config_boolean.cpp  config_concatenation.cpp  config_delayed_merge.cpp  config_delayed_merge_object.cpp  config_double.cpp  config_impl.cpp  config_impl_util.cpp  config_int.cpp  config_int64.cpp  config_null.cpp  config_number.cpp  config_reference.cpp  config_string.cpp  default_transformer.cpp  file_reader.cpp  memo_key.cpp  misc_utils.cpp  parseable.cpp  parser.cpp  path.cpp  path_builder.cpp  resolve_context.cpp  resolve_memos.cpp  resolve_replacer.cpp  resolve_source.cpp  resolve_status.cpp  simple_config.cpp  simple_config_list.cpp  simple_config_object.cpp  simple_config_origin.cpp  simple_include_context.cpp  simple_includer.cpp  string_reader.cpp  substitution_expression.cpp  token.cpp  token_type.cpp  tokenizer.cpp  (+1 more)
AsrServiceProxy/include/: thread_pool.hpp
AsrServiceProxy/log/: CMakeLists.txt  Makefile  log.project  log.txt
AsrServiceProxy/log/include/: logapi.hpp  logimpl.hpp
AsrServiceProxy/log/src/: log.cpp  log4cpp.cpp  logapi.cpp  logimpl.cpp  logreceiver.cpp  regmatch.cpp
AsrServiceProxy/proto/: asr_service_proxy.proto
AsrServiceProxy/src/: CMakeLists.txt
AsrServiceProxy/utils/: CMakeLists.txt  Makefile  utils.mk  utils.project  utils.txt
AsrServiceProxy/utils/include/: aip.hpp  aip_common.hpp  aip_cycle_thread.hpp  aip_log.hpp  aip_sleeper.hpp  aip_thread.hpp  aip_time.hpp  base64.hpp  critsec.hpp  event.hpp  http.hpp  ipc.hpp  json_util.hpp  scoped_file.hpp  scoped_ptr.hpp  scopedlock.hpp  semaphore.hpp  url_parser.hpp  utils.hpp
AsrServiceProxy/utils/src/: aip_cycle_thread.cpp  aip_sleeper.cpp  aip_thread.cpp  base64.cpp  critsec.cpp  event.cpp  http.cpp  ipc.cpp  json_utils.cpp  scopedlock.cpp  semaphore.cpp  url_parser.cpp  utils.cpp
